Fix fields wrapping by using flex fields in "Send to mail" form

--- a/sass/mail.scss
+++ b/sass/mail.scss
@@ -28,9 +28,12 @@ body.page-printmail {
                 width: 120px;
             }
             input {
+                flex: 100%;
                 min-width: 0;
 
+
                 @include breakpoint(430px) {
+                    flex: 1 1 calc(100% - 120px);
                     min-width: 250px;                    
                 }
             }
@@ -44,10 +47,12 @@ body.page-printmail {
                 width: 120px;
             }
             .form-textarea-wrapper {
-                flex: 1 1 calc(100% - 120px);
+                flex: 100%;
                 min-width: 0;
 
+
                 @include breakpoint(430px) {
+                    flex: 1 1 calc(100% - 120px);
                     min-width: 250px;                    
                 }
             }
@@ -56,12 +61,13 @@ body.page-printmail {
             }
         }
         .form-type-item > a{
-            flex: 1 1 calc(100% - 120px);
-            min-width: 0;
             word-break: break-word;
+            flex: 100%;
+            min-width: 0;
 
-            @include breakpoint(450px) {
-                min-width: 400px;                    
+            @include breakpoint(430px) {
+                flex: 1 1 calc(100% - 120px);
+                min-width: 250px;                    
             }
         }
         .form-item-txt-message {
